Fundamentals of code

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,12 +7,87 @@
     <title>Document</title>
     <link rel="stylesheet" href="/CSS/bootstrap.min.css">
     <link rel="stylesheet" href="/CSS/bootstrap.css.map">
+    <link rel="stylesheet" href="/CSS/brandrepresentation.css">
 </head>
 <body>
-    <link rel="stylesheet" href="/JS/jquery-3.6.0.js">
-    <link rel="stylesheet" href="/JS/bootstrap.bundle.min.js">
-    <link rel="stylesheet" href="/JS/bootstrap.bundle.min.js.map">
+    <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Picture</th>
+              <th>Name</th>
+              <th>Surname</th>
+              <th>Email Address</th>
+              <th>Status</th>
+              <th>Out Time</th>
+              <th>Duration</th>
+              <th>Expected Return Time</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><img src="person1.jpg" alt="Person 1"></td>
+              <td>John</td>
+              <td>Doe</td>
+              <td>johndoe@example.com</td>
+              <td>In</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+            </tr>
+            <tr>
+              <td><img src="person2.jpg" alt="Person 2"></td>
+              <td>Jane</td>
+              <td>Smith</td>
+              <td>janesmith@example.com</td>
+              <td>Out</td>
+              <td>11:30 AM</td>
+              <td>30 minutes</td>
+              <td>12:00 PM</td>
+            </tr>
+            <tr>
+              <td><img src="person3.jpg" alt="Person 3"></td>
+              <td>Bob</td>
+              <td>Johnson</td>
+              <td>bjohnson@example.com</td>
+              <td>In</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+            </tr>
+            <tr>
+              <td><img src="person4.jpg" alt="Person 4"></td>
+              <td>Bob</td>
+              <td>Johnson</td>
+              <td>bjohnson@example.com</td>
+              <td>In</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+            </tr>
+            <tr>
+              <td><img src="person5.jpg" alt="Person 5"></td>
+              <td>Bob</td>
+              <td>Johnson</td>
+              <td>bjohnson@example.com</td>
+              <td>In</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="clock">
+        <h1 id="clock"></h1>
+      </div>
 
-    
+
+
+
+    <script src="/JS/jquery-3.6.0.js"></script>
+    <script src="/JS/bootstrap.bundle.min.js"></script>
+    <script src="/JS/bootstrap.bundle.min.js.map"></script>
+    <script src="/JS/functions.js"></script>
 </body>
 </html>
