One of the final commits

--- a/HTML/index copy.html
+++ b/HTML/index copy.html
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <!-- Company Logo/Image -->
+  <!-- Logo/Image -->
 
   <img src="/Images/Company_logo.png" alt="WeDeliverTech Company Logo" id="static-image">
 
@@ -179,7 +179,7 @@
 
   </div>
 
-  <!-- Staff Toast -->
+  <!-- Toasts -->
 
   <div class="toast-container">
     <div class="position-fixed top-0 end-0 p-3" style="z-index: 6" data-bs-autohide="false">
@@ -202,8 +202,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Delivery Driver Toast -->
 
   <div class="toast-container">
     <div class="position-fixed top-0 start-0 p-3" style="z-index: 6" data-bs-autohide="false">
@@ -234,7 +232,7 @@
 
   <script src="/JS/jquery-3.6.0.js"></script>
   <script src="/JS/bootstrap.bundle.min.js"></script>
-  <script src="/JS/wdt_app.js"></script>
+  <script src="/JS/wdt_appcopy.js"></script>
 </body>
 
 </html>
