--- a/Web Application/HTML/index.html
+++ b/Web Application/HTML/index.html
@@ -9,8 +9,8 @@
 
   <!-- CSS file and bootstrap, + bootstrap icons, connected to the HTML -->
 
-  <link rel="stylesheet" href="/CSS/bootstrap.min.css">
-  <link rel="stylesheet" href="/CSS/brandrepresentation.css">
+  <link rel="stylesheet" href="/Web Application/CSS/bootstrap.min.css">
+  <link rel="stylesheet" href="/Web Application/CSS/brandrepresentation.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
@@ -56,7 +56,7 @@
 
   <!-- Company Logo/Image -->
 
-  <img src="/Images/Company_logo.png" alt="WeDeliverTech Company Logo" id="static-image">
+  <img src="/Web Application/Images/Company_logo.png" alt="WeDeliverTech Company Logo" id="static-image">
 
   <!-- Headers -->
 
@@ -232,9 +232,9 @@
 
   <!-- JS variant of plugins: bootstrap + jQuery. JS file linked to HTML. -->
 
-  <script src="/JS/jquery-3.6.0.js"></script>
-  <script src="/JS/bootstrap.bundle.min.js"></script>
-  <script src="/JS/wdt_app.js"></script>
+  <script src="/Web Application/JS/jquery-3.6.0.js"></script>
+  <script src="/Web Application/JS/bootstrap.bundle.min.js"></script>
+  <script src="/Web Application/JS/wdt_app.js"></script>
 </body>
 
 </html>
